--- a/IT_Lab/5myCollege.html
+++ b/IT_Lab/5myCollege.html
@@ -2,8 +2,59 @@
 <html lang="en">
 <head>
     <title>MY College</title>
+    <style>
+        body {
+            background-image: url('./image.png');
+            background-size: cover;
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        h1 {
+            font-size: 4em;
+            color: rgb(79, 14, 176);
+            margin: 10px 0;
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
+        }
+
+        h4 {
+            color: rgb(46, 59, 17);
+            font-size: 2.2em;
+            margin: 5px 0;
+            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.6);
+        }
+        h3 {
+            color: rgb(23, 88, 141);
+            font-size: 2.2em;
+            margin: 5px 0;
+            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.6);
+        }
+
+        marquee h2 {
+            color: rgb(45, 254, 59);
+            font-size: 2em;
+            font-weight: bold;
+            margin-top: 150px;
+        }
+    </style>
 </head>
-<body style="background-image: url('./image.png'); height: 800px; background-size: cover; background-position: center;">
-    
+<body>
+    <h1>GitaRam Institute Of Management</h1>
+    <h4>N.H 34 High Road More,</h4>
+    <h4>Berhampore, West Bengal, 742187</h4>
+
+    <h2 style="margin-top: 90px;"><u>Course Offers:</u></h2>
+    <ol style="list-style-type: square;">
+        <li><h4>BCA</h4></li>
+        <li><h3>BBA</h3></li>
+        <li><h2>BHM</h2></li>
+    </ol>
+
+    <marquee behavior="scroll" direction="right">
+        <h2>Admission Going On</h2>
+    </marquee>
 </body>
 </html>
+
